# spur-cloud

./: Cargo.toml  README.md  deny.toml  spur-cloud.toml.example
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-lint.yml
crates/spur-cloud-api/: Cargo.toml
crates/spur-cloud-api/src/: config.rs  main.rs  spur_client.rs  state.rs  update.rs
crates/spur-cloud-api/src/auth/: github.rs  jwt.rs  middleware.rs  mod.rs  oidc_common.rs  okta.rs  principal.rs
crates/spur-cloud-api/src/db/: billing_repo.rs  migrations.rs  mod.rs  session_repo.rs  ssh_key_repo.rs  user_repo.rs
crates/spur-cloud-api/src/models/: mod.rs  session.rs  user.rs
crates/spur-cloud-api/src/routes/: admin.rs  auth.rs  billing.rs  gpus.rs  health.rs  mod.rs  sessions.rs  users.rs  ws.rs
crates/spur-cloud-api/src/ssh/: mod.rs  service_manager.rs
crates/spur-cloud-api/src/terminal/: mod.rs  ws_handler.rs
crates/spur-cloud-common/: Cargo.toml
crates/spur-cloud-common/src/: gpu_types.rs  lib.rs  session_types.rs
deploy/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.session  gpuaas-entrypoint.sh
deploy/k8s/: gpuaas-api.yaml
frontend/src/api/: client.ts
