[workspace]
resolver = "2"
members = [
    "crates/spur-cloud-api",
    "crates/spur-cloud-common",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/ROCm/spur-cloud"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC (client to spurctld)
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# REST API
axum = { version = "0.7", features = ["json", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# K8s (for kube exec terminal bridge)
kube = { version = "0.97", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP client (for OAuth/OIDC)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# K8s CRD schema
schemars = "0.8"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
bytes = "1"
url = "2"
base64 = "0.22"
rand = "0.8.6"
sha2 = "0.10"
semver = "1"

# Spur proto — pinned to ROCm/spur release tag (see Cargo.lock for exact commit)
spur-proto = { git = "https://github.com/ROCm/spur.git", tag = "v0.3.0" }

# Internal
spur-cloud-common = { path = "crates/spur-cloud-common" }
