[package]
name = "spur-cloud-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "spur-cloud-api"
path = "src/main.rs"

[dependencies]
spur-proto.workspace = true
spur-cloud-common.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

sqlx.workspace = true

kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true

jsonwebtoken.workspace = true
argon2.workspace = true
reqwest.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

chrono.workspace = true
uuid.workspace = true
futures-util.workspace = true
bytes.workspace = true
url.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
semver.workspace = true
